--- a/TheForestDedicatedServerManager/TheForestDedicatedServerManager.csproj
+++ b/TheForestDedicatedServerManager/TheForestDedicatedServerManager.csproj
@@ -78,6 +78,7 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.5.0.0\lib\net45\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
@@ -162,6 +163,10 @@
     <ProjectReference Include="..\AppConfiguration\AppConfiguration.csproj">
       <Project>{9c218375-a37a-4fed-95a0-f2cff4621bc8}</Project>
       <Name>AppConfiguration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheForestDedicatedServerManagerService\TheForestDedicatedServerManagerService.csproj">
+      <Project>{9bbe2dee-a526-4a14-a77c-61b5b95b4282}</Project>
+      <Name>TheForestDedicatedServerManagerService</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
