--- a/TheForestDedicatedServerManager/TheForestDedicatedServerManager.csproj
+++ b/TheForestDedicatedServerManager/TheForestDedicatedServerManager.csproj
@@ -188,5 +188,8 @@
   <ItemGroup>
     <Resource Include="Images\theforest.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\settings.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
