Refactored app configuration

--- a/AppConfiguration/AppConfiguration.csproj
+++ b/AppConfiguration/AppConfiguration.csproj
@@ -44,14 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigurationSectionBase.cs" />
-    <Compile Include="AppConfigurationManager.cs" />
-    <Compile Include="AppConfig.cs" />
+    <Compile Include="AppConfigManager.cs" />
+    <Compile Include="AppConfigSection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
