--- a/TheForestDedicatedServerManager/packages.config
+++ b/TheForestDedicatedServerManager/packages.config
@@ -5,6 +5,7 @@
   <package id="Prism.Core" version="8.0.0.1909" targetFramework="net472" />
   <package id="Prism.Unity" version="8.0.0.1909" targetFramework="net472" />
   <package id="Prism.Wpf" version="8.0.0.1909" targetFramework="net472" />
+  <package id="PrismBase" version="1.0.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="Unity.Abstractions" version="5.11.7" targetFramework="net472" />
