Error checking for scheduling shutdowns and logging

--- a/TheForestDSM/packages.config
+++ b/TheForestDSM/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Extended.Wpf.Toolkit" version="4.3.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
+  <package id="NLog" version="4.7.15" targetFramework="net472" />
   <package id="Prism.Core" version="8.1.97" targetFramework="net472" />
   <package id="Prism.Unity" version="8.1.97" targetFramework="net472" />
   <package id="Prism.Wpf" version="8.1.97" targetFramework="net472" />
