--- a/TheForestDSM.ShutdownService/TheForestDSM.ShutdownService.csproj
+++ b/TheForestDSM.ShutdownService/TheForestDSM.ShutdownService.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.7.15\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
@@ -42,7 +45,11 @@
     <Reference Include="System.Data.SQLite, Version=1.0.115.5, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.5\lib\net46\System.Data.SQLite.dll</HintPath>
     </Reference>
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -86,6 +93,14 @@
     <ProjectReference Include="..\Extensions\Extensions.csproj">
       <Project>{983598da-d433-4518-94b0-6829e6f8b99c}</Project>
       <Name>Extensions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheForestDSM.Logging\TheForestDSM.Logging.csproj">
+      <Project>{4bf53201-d835-4280-bcc2-27348543ff1a}</Project>
+      <Name>TheForestDSM.Logging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheForestDSM.Utilities\TheForestDSM.Utilities.csproj">
+      <Project>{1805CD89-6AB3-47C8-98EB-BF81F52CBDA2}</Project>
+      <Name>TheForestDSM.Utilities</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
